--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1475,6 +1475,11 @@ input::placeholder {
   background-color: rgb(110 47 255 / var(--tw-bg-opacity));
 }
 
+.bg-tertiary {
+  --tw-bg-opacity: 1;
+  background-color: rgb(238 47 255 / var(--tw-bg-opacity));
+}
+
 .bg-opacity-100 {
   --tw-bg-opacity: 1;
 }
@@ -1485,6 +1490,10 @@ input::placeholder {
 
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
+}
+
+.bg-opacity-25 {
+  --tw-bg-opacity: 0.25;
 }
 
 .bg-gradient-to-tr {
@@ -1702,6 +1711,10 @@ input::placeholder {
   font-weight: 500;
 }
 
+.uppercase {
+  text-transform: uppercase;
+}
+
 .tracking-tight {
   letter-spacing: -0.025em;
 }
@@ -1719,6 +1732,11 @@ input::placeholder {
 .text-secondary {
   --tw-text-opacity: 1;
   color: rgb(167 129 254 / var(--tw-text-opacity));
+}
+
+.text-tertiary {
+  --tw-text-opacity: 1;
+  color: rgb(238 47 255 / var(--tw-text-opacity));
 }
 
 .text-opacity-70 {
