--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -636,6 +636,9 @@ body {
   text-align: center;
   font-family: Inter, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 700;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
 }
 
 .bttn-square {
@@ -644,11 +647,6 @@ body {
 
 .bttn-round {
   border-radius: 9999px;
-}
-
-.bttn-outline {
-  border-radius: 9999px;
-  border-width: 2px;
 }
 
 .bttn-normal {
@@ -660,13 +658,6 @@ body {
   line-height: 1rem;
 }
 
-.bttn-outline-white {
-  --tw-border-opacity: 1;
-  border-color: rgb(248 245 255 / var(--tw-border-opacity));
-  --tw-text-opacity: 1;
-  color: rgb(248 245 255 / var(--tw-text-opacity));
-}
-
 .bttn-white {
   --tw-bg-opacity: 1;
   background-color: rgb(248 245 255 / var(--tw-bg-opacity));
@@ -676,6 +667,25 @@ body {
 
 .bttn-gradient {
   background: linear-gradient(to top right, #EE2FFF99, #fff0, #fff), linear-gradient(to top left, #6E2FFF99, #fff, #fff), #F8F5FF;
+  background-size: 100% 100%;
+  background-position: center;
+}
+
+.bttn-gradient::after {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+  display: inline-block;
+  content: "-->";
+  padding-left: 0.5em;
+}
+
+.bttn-gradient:hover::after {
+  padding-left: 0.75em;
+}
+
+.bttn-gradient:hover {
+  background-size: 150% 100%;
 }
 
 .bttn-disabled {
@@ -1129,35 +1139,6 @@ input::placeholder {
   flex-grow: 1;
 }
 
-@-webkit-keyframes fade-in-up {
-  0% {
-    opacity: 0;
-    transform: translateY(12px);
-  }
-
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-
-@keyframes fade-in-up {
-  0% {
-    opacity: 0;
-    transform: translateY(12px);
-  }
-
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-
-.animate-fade-in-up {
-  -webkit-animation: fade-in-up 700ms ease-in-out 300ms forwards;
-          animation: fade-in-up 700ms ease-in-out 300ms forwards;
-}
-
 @-webkit-keyframes fade-in-down {
   0% {
     opacity: 0;
@@ -1243,6 +1224,35 @@ input::placeholder {
 .animate-fade-in-right {
   -webkit-animation: fade-in-right 700ms ease-in-out 300ms forwards;
           animation: fade-in-right 700ms ease-in-out 300ms forwards;
+}
+
+@-webkit-keyframes fade-in-up {
+  0% {
+    opacity: 0;
+    transform: translateY(12px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes fade-in-up {
+  0% {
+    opacity: 0;
+    transform: translateY(12px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.animate-fade-in-up {
+  -webkit-animation: fade-in-up 700ms ease-in-out 300ms forwards;
+          animation: fade-in-up 700ms ease-in-out 300ms forwards;
 }
 
 .cursor-pointer {
