--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -578,13 +578,9 @@ body {
 }
 
 .section-header {
-  background-image: linear-gradient(to top right, var(--tw-gradient-stops));
-  --tw-gradient-from: #6E2FFF;
-  --tw-gradient-to: rgb(110 47 255 / 0);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-  --tw-gradient-to: rgb(248 245 255 / 0);
-  --tw-gradient-stops: var(--tw-gradient-from), #F8F5FF, var(--tw-gradient-to);
-  --tw-gradient-to: #F8F5FF;
+  background: linear-gradient(to top right, rgb(110 47 255 / 75%), rgb(248 245 255 / 0%), #F8F5FF), linear-gradient(to top left, rgb(110 47 255 / 40%), #F8F5FF, #F8F5FF), #F8F5FF;
+  -webkit-background-clip: text;
+          background-clip: text;
   text-align: left;
   font-family: Inter, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 1.5rem;
@@ -593,6 +589,7 @@ body {
   letter-spacing: -0.025em;
   --tw-text-opacity: 1;
   color: rgb(248 245 255 / var(--tw-text-opacity));
+  color: transparent;
 }
 
 @media (min-width: 768px) {
@@ -600,12 +597,6 @@ body {
     font-size: 2.25rem;
     line-height: 2.5rem;
   }
-}
-
-.section-header {
-  background: linear-gradient(to top right, #6E2FFF99, #fff0, #fff), linear-gradient(to top left, #6E2FFFBF, #fff, #fff), #F8F5FF;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
 }
 
 .section {
@@ -666,26 +657,30 @@ body {
 }
 
 .bttn-gradient {
-  background: linear-gradient(to top right, #EE2FFF99, #fff0, #fff), linear-gradient(to top left, #6E2FFF99, #fff, #fff), #F8F5FF;
-  background-size: 100% 100%;
+  background: linear-gradient(to top right, rgb(238 47 255 / 50%), rgb(248 245 255 / 0%), #F8F5FF), linear-gradient(to top left, rgb(110 47 255 / 50%), #F8F5FF, #F8F5FF), #F8F5FF;
   background-position: center;
+  transition-property: box-shadow;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-delay: 75ms;
+  transition-duration: 500ms;
 }
 
 .bttn-gradient::after {
+  display: inline-block;
+  padding-left: 0.5rem;
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
-  display: inline-block;
   content: "-->";
-  padding-left: 0.5em;
 }
 
 .bttn-gradient:hover::after {
-  padding-left: 0.75em;
+  padding-left: 0.75rem;
 }
 
 .bttn-gradient:hover {
   background-size: 150% 100%;
+  box-shadow: 0 0 18px rgb(219 192 255 / 50%), 0 0 4px rgb(120 65 255 / 12%);
 }
 
 .bttn-disabled {
@@ -711,9 +706,10 @@ body {
 }
 
 .glow-text-white {
-  background: linear-gradient(to top right, #EE2FFF99, #fff0, #fff), linear-gradient(to top left, #6E2FFF99, #fff, #fff), #F8F5FF;
+  background: linear-gradient(to top right, rgb(238 47 255 / 50%), rgb(248 245 255 / 0%), #F8F5FF), linear-gradient(to top left, rgb(110 47 255 / 50%), #F8F5FF, #F8F5FF), #F8F5FF;
   -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+          background-clip: text;
+  color: transparent;
   text-shadow: 0 0 72px rgb(219 192 255 / 75%), 0 0 24px rgb(120 65 255 / 24%);
 }
 
@@ -1142,7 +1138,7 @@ input::placeholder {
 @-webkit-keyframes fade-in-down {
   0% {
     opacity: 0;
-    transform: translateY(-12px);
+    transform: translateY(-18px);
   }
 
   100% {
@@ -1154,7 +1150,7 @@ input::placeholder {
 @keyframes fade-in-down {
   0% {
     opacity: 0;
-    transform: translateY(-12px);
+    transform: translateY(-18px);
   }
 
   100% {
@@ -1171,7 +1167,7 @@ input::placeholder {
 @-webkit-keyframes fade-in-left {
   0% {
     opacity: 0;
-    transform: translateX(-12px);
+    transform: translateX(-24px);
   }
 
   100% {
@@ -1183,7 +1179,7 @@ input::placeholder {
 @keyframes fade-in-left {
   0% {
     opacity: 0;
-    transform: translateX(-12px);
+    transform: translateX(-24px);
   }
 
   100% {
@@ -1200,7 +1196,7 @@ input::placeholder {
 @-webkit-keyframes fade-in-right {
   0% {
     opacity: 0;
-    transform: translateX(12px);
+    transform: translateX(24px);
   }
 
   100% {
@@ -1212,7 +1208,7 @@ input::placeholder {
 @keyframes fade-in-right {
   0% {
     opacity: 0;
-    transform: translateX(12px);
+    transform: translateX(24px);
   }
 
   100% {
@@ -1229,7 +1225,7 @@ input::placeholder {
 @-webkit-keyframes fade-in-up {
   0% {
     opacity: 0;
-    transform: translateY(12px);
+    transform: translateY(18px);
   }
 
   100% {
@@ -1241,7 +1237,7 @@ input::placeholder {
 @keyframes fade-in-up {
   0% {
     opacity: 0;
-    transform: translateY(12px);
+    transform: translateY(18px);
   }
 
   100% {
