--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -567,6 +567,10 @@ body {
   background-color: rgb(9 0 31 / var(--tw-bg-opacity));
 }
 
+.bg-gradient-white {
+  background: linear-gradient(to top right, rgb(110 47 255 / 75%), rgb(248 245 255 / 0%), #F8F5FF), linear-gradient(to top left, rgb(110 47 255 / 40%), #F8F5FF, #F8F5FF), #F8F5FF;
+}
+
 .nav-link {
   margin-top: auto;
   margin-bottom: auto;
@@ -678,9 +682,12 @@ body {
   padding-left: 0.75rem;
 }
 
+.bttn-gradient:hover:hover {
+  box-shadow: 0 0 18px rgb(219 192 255 / 50%), 0 0 4px rgb(120 65 255 / 12%);
+}
+
 .bttn-gradient:hover {
   background-size: 150% 100%;
-  box-shadow: 0 0 18px rgb(219 192 255 / 50%), 0 0 4px rgb(120 65 255 / 12%);
 }
 
 .bttn-disabled {
@@ -1476,9 +1483,9 @@ input::placeholder {
   background-color: rgb(21 9 49 / var(--tw-bg-opacity));
 }
 
-.bg-primary {
+.bg-secondary {
   --tw-bg-opacity: 1;
-  background-color: rgb(110 47 255 / var(--tw-bg-opacity));
+  background-color: rgb(167 129 254 / var(--tw-bg-opacity));
 }
 
 .bg-tertiary {
@@ -1492,10 +1499,6 @@ input::placeholder {
 
 .bg-opacity-0 {
   --tw-bg-opacity: 0;
-}
-
-.bg-opacity-50 {
-  --tw-bg-opacity: 0.5;
 }
 
 .bg-opacity-25 {
@@ -1518,6 +1521,11 @@ input::placeholder {
 
 .bg-contain {
   background-size: contain;
+}
+
+.bg-clip-text {
+  -webkit-background-clip: text;
+          background-clip: text;
 }
 
 .bg-center {
@@ -1735,6 +1743,10 @@ input::placeholder {
   color: rgb(254 242 242 / var(--tw-text-opacity));
 }
 
+.text-transparent {
+  color: transparent;
+}
+
 .text-secondary {
   --tw-text-opacity: 1;
   color: rgb(167 129 254 / var(--tw-text-opacity));
@@ -1802,12 +1814,6 @@ input::placeholder {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-lg {
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .outline-offset-0 {
   outline-offset: 0px;
 }
@@ -1815,6 +1821,12 @@ input::placeholder {
 .ring-1 {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.ring-0 {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
@@ -1862,6 +1874,17 @@ input::placeholder {
 }
 
 /* Custom Styles */
+
+.hover\:translate-y-px:hover {
+  --tw-translate-y: 1px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:scale-105:hover {
+  --tw-scale-x: 1.05;
+  --tw-scale-y: 1.05;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
 
 .hover\:bg-gray-800:hover {
   --tw-bg-opacity: 1;
