--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1705,6 +1705,21 @@ input::placeholder {
   line-height: 1.75rem;
 }
 
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
+
+.text-6xl {
+  font-size: 3.75rem;
+  line-height: 1;
+}
+
 .font-extrabold {
   font-weight: 800;
 }
