--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -839,6 +839,245 @@ input::placeholder {
   max-width: 100%;
 }
 
+.blog-content p {
+  margin-bottom: 1rem;
+  font-family: Inter, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 0.875rem;
+  font-weight: 400;
+  line-height: 1.25rem;
+  --tw-text-opacity: 1;
+  color: rgb(248 245 255 / var(--tw-text-opacity));
+}
+
+@media (min-width: 768px) {
+  .blog-content p {
+    margin-bottom: 1.5rem;
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+}
+
+.blog-content h1 {
+  background: linear-gradient(to top right, rgb(110 47 255 / 75%), rgb(248 245 255 / 0%), #F8F5FF), linear-gradient(to top left, rgb(110 47 255 / 40%), #F8F5FF, #F8F5FF), #F8F5FF;
+  margin-top: 1.5rem;
+  margin-bottom: 0.5rem;
+  -webkit-background-clip: text;
+          background-clip: text;
+  text-align: left;
+  font-family: Inter, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 1.5rem;
+  line-height: 2rem;
+  font-weight: 800;
+  letter-spacing: -0.025em;
+  --tw-text-opacity: 1;
+  color: rgb(248 245 255 / var(--tw-text-opacity));
+  color: transparent;
+}
+
+@media (min-width: 768px) {
+  .blog-content h1 {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+}
+
+.blog-content h2 {
+  background: linear-gradient(to top right, rgb(110 47 255 / 75%), rgb(248 245 255 / 0%), #F8F5FF), linear-gradient(to top left, rgb(110 47 255 / 40%), #F8F5FF, #F8F5FF), #F8F5FF;
+  margin-top: 1rem;
+  margin-bottom: 0.5rem;
+  -webkit-background-clip: text;
+          background-clip: text;
+  text-align: left;
+  font-family: Inter, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+  font-weight: 700;
+  letter-spacing: -0.025em;
+  --tw-text-opacity: 1;
+  color: rgb(248 245 255 / var(--tw-text-opacity));
+  color: transparent;
+}
+
+@media (min-width: 768px) {
+  .blog-content h2 {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+}
+
+.blog-content h3 {
+  background: linear-gradient(to top right, rgb(110 47 255 / 75%), rgb(248 245 255 / 0%), #F8F5FF), linear-gradient(to top left, rgb(110 47 255 / 40%), #F8F5FF, #F8F5FF), #F8F5FF;
+  margin-top: 0.75rem;
+  margin-bottom: 0.5rem;
+  -webkit-background-clip: text;
+          background-clip: text;
+  text-align: left;
+  font-family: Inter, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+  font-weight: 700;
+  letter-spacing: -0.025em;
+  --tw-text-opacity: 1;
+  color: rgb(248 245 255 / var(--tw-text-opacity));
+  color: transparent;
+}
+
+@media (min-width: 768px) {
+  .blog-content h3 {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+}
+
+.blog-content h4 {
+  background: linear-gradient(to top right, rgb(110 47 255 / 75%), rgb(248 245 255 / 0%), #F8F5FF), linear-gradient(to top left, rgb(110 47 255 / 40%), #F8F5FF, #F8F5FF), #F8F5FF;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  -webkit-background-clip: text;
+          background-clip: text;
+  text-align: left;
+  font-family: Inter, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 1rem;
+  line-height: 1.5rem;
+  font-weight: 700;
+  letter-spacing: -0.025em;
+  --tw-text-opacity: 1;
+  color: rgb(248 245 255 / var(--tw-text-opacity));
+  color: transparent;
+}
+
+@media (min-width: 768px) {
+  .blog-content h4 {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+}
+
+.blog-content h5 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  text-align: left;
+  font-family: Inter, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 0.75rem;
+  line-height: 1rem;
+  font-weight: 800;
+  --tw-text-opacity: 1;
+  color: rgb(248 245 255 / var(--tw-text-opacity));
+}
+
+.blog-content h6 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  text-align: left;
+  font-family: Inter, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 0.6rem;
+  font-weight: 600;
+  --tw-text-opacity: 1;
+  color: rgb(248 245 255 / var(--tw-text-opacity));
+  opacity: 0.8;
+}
+
+.blog-content a {
+  font-family: Inter, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  font-weight: 400;
+  --tw-text-opacity: 1;
+  color: rgb(248 245 255 / var(--tw-text-opacity));
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+}
+
+@media (min-width: 768px) {
+  .blog-content a {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+}
+
+.blog-content a:hover {
+  -webkit-text-decoration-line: none;
+          text-decoration-line: none;
+}
+
+.blog-content img {
+  max-width: 100%;
+}
+
+.blog-content ul {
+  margin-bottom: 1rem;
+}
+
+.blog-content li {
+  margin-left: 2rem;
+  margin-top: 0.5rem;
+  display: list-item;
+  list-style-position: outside;
+  list-style-type: disc;
+  font-family: Inter, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  font-weight: 400;
+  --tw-text-opacity: 1;
+  color: rgb(248 245 255 / var(--tw-text-opacity));
+}
+
+@media (min-width: 768px) {
+  .blog-content li {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+}
+
+.blog-content code {
+  white-space: pre-wrap;
+  border-radius: 0.375rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(21 9 49 / var(--tw-bg-opacity));
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  padding-top: 0.25rem;
+  padding-bottom: 1px;
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  font-size: 0.75rem;
+  line-height: 1rem;
+  font-weight: 400;
+}
+
+@media (min-width: 768px) {
+  .blog-content code {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+}
+
+.blog-content pre {
+  white-space: pre-wrap;
+  border-radius: 0.375rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(21 9 49 / var(--tw-bg-opacity));
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0px;
+  padding-bottom: 1rem;
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  font-size: 0.75rem;
+  line-height: 1rem;
+  font-weight: 400;
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+  --tw-ring-color: rgb(61 36 117 / var(--tw-ring-opacity));
+  --tw-ring-opacity: 0.4;
+}
+
+@media (min-width: 768px) {
+  .blog-content pre {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+}
+
 .static {
   position: static;
 }
@@ -895,6 +1134,11 @@ input::placeholder {
   margin-bottom: 1.5rem;
 }
 
+.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+
 .my-2 {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
@@ -903,11 +1147,6 @@ input::placeholder {
 .my-1 {
   margin-top: 0.25rem;
   margin-bottom: 0.25rem;
-}
-
-.mx-2 {
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
 }
 
 .mt-4 {
@@ -958,6 +1197,26 @@ input::placeholder {
   margin-left: auto;
 }
 
+.mt-3 {
+  margin-top: 0.75rem;
+}
+
+.mt-auto {
+  margin-top: auto;
+}
+
+.ml-4 {
+  margin-left: 1rem;
+}
+
+.mt-0\.5 {
+  margin-top: 0.125rem;
+}
+
+.mt-0 {
+  margin-top: 0px;
+}
+
 .mr-2 {
   margin-right: 0.5rem;
 }
@@ -966,16 +1225,12 @@ input::placeholder {
   margin-left: 0.75rem;
 }
 
-.ml-4 {
-  margin-left: 1rem;
-}
-
 .mb-2 {
   margin-bottom: 0.5rem;
 }
 
-.mt-3 {
-  margin-top: 0.75rem;
+.mr-4 {
+  margin-right: 1rem;
 }
 
 .mb-6 {
@@ -1036,6 +1291,14 @@ input::placeholder {
   height: max-content;
 }
 
+.h-48 {
+  height: 12rem;
+}
+
+.h-8 {
+  height: 2rem;
+}
+
 .h-10 {
   height: 2.5rem;
 }
@@ -1072,8 +1335,8 @@ input::placeholder {
   width: 100vw;
 }
 
-.w-1\/2 {
-  width: 50%;
+.w-8 {
+  width: 2rem;
 }
 
 .w-10 {
@@ -1082,6 +1345,10 @@ input::placeholder {
 
 .w-1\/4 {
   width: 25%;
+}
+
+.w-1\/2 {
+  width: 50%;
 }
 
 .w-max {
@@ -1114,6 +1381,14 @@ input::placeholder {
   width: 33.333333%;
 }
 
+.w-1 {
+  width: 0.25rem;
+}
+
+.w-px {
+  width: 1px;
+}
+
 .min-w-full {
   min-width: 100%;
 }
@@ -1124,6 +1399,14 @@ input::placeholder {
 
 .max-w-sm {
   max-width: 24rem;
+}
+
+.max-w-7xl {
+  max-width: 80rem;
+}
+
+.flex-1 {
+  flex: 1 1 0%;
 }
 
 .flex-shrink {
@@ -1288,6 +1571,10 @@ input::placeholder {
   flex-direction: column;
 }
 
+.flex-col-reverse {
+  flex-direction: column-reverse;
+}
+
 .flex-nowrap {
   flex-wrap: nowrap;
 }
@@ -1393,6 +1680,11 @@ input::placeholder {
   border-radius: 1rem;
 }
 
+.rounded-t-md {
+  border-top-left-radius: 0.375rem;
+  border-top-right-radius: 0.375rem;
+}
+
 .border {
   border-width: 1px;
 }
@@ -1493,8 +1785,14 @@ input::placeholder {
   background-color: rgb(238 47 255 / var(--tw-bg-opacity));
 }
 
-.bg-opacity-30 {
-  --tw-bg-opacity: 0.3;
+.bg-gray-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 20 77 / var(--tw-bg-opacity));
+}
+
+.bg-gray-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(61 36 117 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-100 {
@@ -1535,10 +1833,6 @@ input::placeholder {
   background-size: cover;
 }
 
-.bg-fixed {
-  background-attachment: fixed;
-}
-
 .bg-clip-text {
   -webkit-background-clip: text;
           background-clip: text;
@@ -1550,6 +1844,11 @@ input::placeholder {
 
 .bg-no-repeat {
   background-repeat: no-repeat;
+}
+
+.object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .p-8 {
@@ -1634,8 +1933,16 @@ input::placeholder {
   padding-bottom: 1rem;
 }
 
+.pb-2 {
+  padding-bottom: 0.5rem;
+}
+
 .pt-px {
   padding-top: 1px;
+}
+
+.pt-8 {
+  padding-top: 2rem;
 }
 
 .pl-4 {
@@ -1650,6 +1957,10 @@ input::placeholder {
   padding-bottom: 1.5rem;
 }
 
+.pr-4 {
+  padding-right: 1rem;
+}
+
 .pl-3 {
   padding-left: 0.75rem;
 }
@@ -1662,28 +1973,12 @@ input::placeholder {
   padding-left: 0.5rem;
 }
 
-.pb-2 {
-  padding-bottom: 0.5rem;
-}
-
-.pb-4 {
-  padding-bottom: 1rem;
-}
-
 .text-left {
   text-align: left;
 }
 
 .text-center {
   text-align: center;
-}
-
-.align-text-top {
-  vertical-align: text-top;
-}
-
-.align-text-bottom {
-  vertical-align: text-bottom;
 }
 
 .font-sans {
@@ -1762,6 +2057,10 @@ input::placeholder {
   text-transform: uppercase;
 }
 
+.italic {
+  font-style: italic;
+}
+
 .tracking-tight {
   letter-spacing: -0.025em;
 }
@@ -1771,13 +2070,13 @@ input::placeholder {
   color: rgb(248 245 255 / var(--tw-text-opacity));
 }
 
+.text-transparent {
+  color: transparent;
+}
+
 .text-red-50 {
   --tw-text-opacity: 1;
   color: rgb(254 242 242 / var(--tw-text-opacity));
-}
-
-.text-transparent {
-  color: transparent;
 }
 
 .text-secondary {
@@ -1785,9 +2084,19 @@ input::placeholder {
   color: rgb(167 129 254 / var(--tw-text-opacity));
 }
 
+.text-gray-100 {
+  --tw-text-opacity: 1;
+  color: rgb(202 188 235 / var(--tw-text-opacity));
+}
+
 .text-tertiary {
   --tw-text-opacity: 1;
   color: rgb(238 47 255 / var(--tw-text-opacity));
+}
+
+.text-gray-400 {
+  --tw-text-opacity: 1;
+  color: rgb(80 49 148 / var(--tw-text-opacity));
 }
 
 .text-opacity-70 {
@@ -1827,12 +2136,12 @@ input::placeholder {
   opacity: 0.7;
 }
 
-.opacity-5 {
-  opacity: 0.05;
-}
-
 .opacity-30 {
   opacity: 0.3;
+}
+
+.opacity-5 {
+  opacity: 0.05;
 }
 
 .shadow-2xl {
@@ -1874,6 +2183,10 @@ input::placeholder {
 
 .ring-opacity-20 {
   --tw-ring-opacity: 0.2;
+}
+
+.ring-opacity-30 {
+  --tw-ring-opacity: 0.3;
 }
 
 .filter {
@@ -1964,6 +2277,11 @@ input::placeholder {
   color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
+.group:hover .group-hover\:underline {
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+}
+
 .group:hover .group-hover\:opacity-100 {
   opacity: 1;
 }
@@ -2004,6 +2322,11 @@ input::placeholder {
     font-size: 1rem;
     line-height: 1.5rem;
   }
+
+  .sm\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
 }
 
 @media (min-width: 768px) {
@@ -2012,14 +2335,14 @@ input::placeholder {
     margin-right: auto;
   }
 
-  .md\:mx-0 {
-    margin-left: 0px;
-    margin-right: 0px;
-  }
-
   .md\:my-auto {
     margin-top: auto;
     margin-bottom: auto;
+  }
+
+  .md\:mx-0 {
+    margin-left: 0px;
+    margin-right: 0px;
   }
 
   .md\:mb-10 {
@@ -2028,6 +2351,14 @@ input::placeholder {
 
   .md\:ml-0 {
     margin-left: 0px;
+  }
+
+  .md\:mt-8 {
+    margin-top: 2rem;
+  }
+
+  .md\:ml-auto {
+    margin-left: auto;
   }
 
   .md\:flex {
@@ -2042,10 +2373,6 @@ input::placeholder {
     height: auto;
   }
 
-  .md\:w-1\/3 {
-    width: 33.333333%;
-  }
-
   .md\:w-1\/2 {
     width: 50%;
   }
@@ -2056,16 +2383,16 @@ input::placeholder {
     width: max-content;
   }
 
-  .md\:w-full {
-    width: 100%;
-  }
-
   .md\:max-w-full {
     max-width: 100%;
   }
 
   .md\:grid-cols-1 {
     grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
+
+  .md\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .md\:flex-row {
@@ -2116,6 +2443,16 @@ input::placeholder {
     line-height: 1.75rem;
   }
 
+  .md\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
+  .md\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
   .md\:shadow-xl {
     --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
     --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
@@ -2143,6 +2480,26 @@ input::placeholder {
     margin-bottom: 2rem;
   }
 
+  .lg\:mb-20 {
+    margin-bottom: 5rem;
+  }
+
+  .lg\:mt-0 {
+    margin-top: 0px;
+  }
+
+  .lg\:mb-4 {
+    margin-bottom: 1rem;
+  }
+
+  .lg\:mr-0 {
+    margin-right: 0px;
+  }
+
+  .lg\:mb-0 {
+    margin-bottom: 0px;
+  }
+
   .lg\:flex {
     display: flex;
   }
@@ -2159,8 +2516,8 @@ input::placeholder {
     width: 50%;
   }
 
-  .lg\:w-1\/3 {
-    width: 33.333333%;
+  .lg\:w-28 {
+    width: 7rem;
   }
 
   .lg\:max-w-7xl {
@@ -2175,16 +2532,36 @@ input::placeholder {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
+  .lg\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .lg\:flex-row {
+    flex-direction: row;
+  }
+
+  .lg\:flex-col {
+    flex-direction: column;
+  }
+
+  .lg\:bg-opacity-25 {
+    --tw-bg-opacity: 0.25;
+  }
+
+  .lg\:bg-opacity-30 {
+    --tw-bg-opacity: 0.3;
+  }
+
+  .lg\:bg-opacity-50 {
+    --tw-bg-opacity: 0.5;
+  }
+
   .lg\:text-center {
     text-align: center;
   }
 }
 
 @media (min-width: 1280px) {
-  .xl\:w-1\/4 {
-    width: 25%;
-  }
-
   .xl\:w-1\/3 {
     width: 33.333333%;
   }
