--- a/app/styles/prism-theme.css
+++ b/app/styles/prism-theme.css
@@ -12,63 +12,63 @@
 */
 pre[class*="language-"],
 code[class*="language-"] {
-  color: #f8f5ff;
-  font-size: 13px;
-  text-shadow: none;
-  font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
-  direction: ltr;
-  text-align: left;
-  white-space: pre;
-  word-spacing: normal;
-  word-break: normal;
-  line-height: 1.5;
-  -moz-tab-size: 4;
-  -o-tab-size: 4;
-  tab-size: 4;
-  -webkit-hyphens: none;
-  -moz-hyphens: none;
-  -ms-hyphens: none;
-  hyphens: none;
+    color: #f8f5ff;
+    font-size: 13px;
+    text-shadow: none;
+    font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
+    direction: ltr;
+    text-align: left;
+    white-space: pre;
+    word-spacing: normal;
+    word-break: normal;
+    line-height: 1.5;
+    -moz-tab-size: 4;
+    -o-tab-size: 4;
+    tab-size: 4;
+    -webkit-hyphens: none;
+    -moz-hyphens: none;
+    -ms-hyphens: none;
+    hyphens: none;
 }
 pre[class*="language-"]::selection,
 code[class*="language-"]::selection,
 pre[class*="language-"]::mozselection,
 code[class*="language-"]::mozselection {
-  text-shadow: none;
-  background: #3d2475;
+    text-shadow: none;
+    background: #3d2475;
 }
 @media print {
-  pre[class*="language-"],
-  code[class*="language-"] {
-    text-shadow: none;
-  }
+    pre[class*="language-"],
+    code[class*="language-"] {
+        text-shadow: none;
+    }
 }
 pre[class*="language-"] {
-  padding: 1em;
-  margin: .5em 0;
-  overflow: auto;
-  background: #150931;
+    padding: 1em;
+    margin: 0.5em 0;
+    overflow: auto;
+    background: #150931;
 }
 :not(pre) > code[class*="language-"] {
-  padding: .1em .3em;
-  border-radius: .3em;
-  color: #f8f5ff;
-  background: #150931;
+    padding: 0.1em 0.3em;
+    border-radius: 0.3em;
+    color: #f8f5ff;
+    background: #150931;
 }
 /*********************************************************
 * Tokens
 */
 .namespace {
-  opacity: .7;
+    opacity: 0.7;
 }
 .token.comment,
 .token.prolog,
 .token.doctype,
 .token.cdata {
-  color: #a791db;
+    color: #a791db;
 }
 .token.punctuation {
-  color: #f8f5ff;
+    color: #f8f5ff;
 }
 .token.property,
 .token.tag,
@@ -77,7 +77,7 @@ pre[class*="language-"] {
 .token.constant,
 .token.symbol,
 .token.deleted {
-  color: #70f5c7;
+    color: #70f5c7;
 }
 .token.selector,
 .token.attr-name,
@@ -85,59 +85,59 @@ pre[class*="language-"] {
 .token.char,
 .token.builtin,
 .token.inserted {
-  color: #97e673;
+    color: #97e673;
 }
 .token.operator,
 .token.entity,
 .token.url,
 .language-css .token.string,
 .style .token.string {
-  color: #ae8cf2;
-  background: #150931;
+    color: #ae8cf2;
+    background: #150931;
 }
 .token.atrule,
 .token.attr-value,
 .token.keyword {
-  color: #ae8cf2;
+    color: #ae8cf2;
 }
 .token.function {
-  color: #2de0e0;
+    color: #2de0e0;
 }
 .token.regex,
 .token.important,
 .token.variable {
-  color: #f8f5ff;
+    color: #f8f5ff;
 }
 .token.important,
 .token.bold {
-  font-weight: bold;
+    font-weight: bold;
 }
 .token.italic {
-  font-style: italic;
+    font-style: italic;
 }
 .token.entity {
-  cursor: help;
+    cursor: help;
 }
 /*********************************************************
 * Line highlighting
 */
 pre[data-line] {
-  position: relative;
+    position: relative;
 }
 pre[class*="language-"] > code[class*="language-"] {
-  position: relative;
-  z-index: 1;
+    position: relative;
+    z-index: 1;
 }
 .line-highlight {
-  position: absolute;
-  left: 0;
-  right: 0;
-  padding: inherit 0;
-  margin-top: 1em;
-  background: #25144d;
-  box-shadow: inset 5px 0 0 #25144d;
-  z-index: 0;
-  pointer-events: none;
-  line-height: inherit;
-  white-space: pre;
+    position: absolute;
+    left: 0;
+    right: 0;
+    padding: inherit 0;
+    margin-top: 1em;
+    background: #25144d;
+    box-shadow: inset 5px 0 0 #25144d;
+    z-index: 0;
+    pointer-events: none;
+    line-height: inherit;
+    white-space: pre;
 }
