✨ add blog page

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1381,6 +1381,10 @@ input::placeholder {
   height: 1rem;
 }
 
+.h-6 {
+  height: 1.5rem;
+}
+
 .h-px {
   height: 1px;
 }
@@ -2100,6 +2104,10 @@ input::placeholder {
   padding-left: 0.5rem;
 }
 
+.pr-6 {
+  padding-right: 1.5rem;
+}
+
 .text-left {
   text-align: left;
 }
@@ -2227,6 +2235,11 @@ input::placeholder {
 .text-tertiary {
   --tw-text-opacity: 1;
   color: rgb(238 47 255 / var(--tw-text-opacity));
+}
+
+.text-blue-500 {
+  --tw-text-opacity: 1;
+  color: rgb(59 130 246 / var(--tw-text-opacity));
 }
 
 .text-opacity-70 {
@@ -2371,9 +2384,19 @@ input::placeholder {
   background-color: rgb(14 4 38 / var(--tw-bg-opacity));
 }
 
+.hover\:text-blue-700:hover {
+  --tw-text-opacity: 1;
+  color: rgb(29 78 216 / var(--tw-text-opacity));
+}
+
 .hover\:underline:hover {
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
+}
+
+.hover\:no-underline:hover {
+  -webkit-text-decoration-line: none;
+          text-decoration-line: none;
 }
 
 .hover\:opacity-50:hover {
@@ -2521,6 +2544,10 @@ input::placeholder {
     width: max-content;
   }
 
+  .md\:w-1\/3 {
+    width: 33.333333%;
+  }
+
   .md\:max-w-full {
     max-width: 100%;
   }
@@ -2599,6 +2626,11 @@ input::placeholder {
   .md\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
+  }
+
+  .md\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
   }
 
   .md\:shadow-xl {
